src/scss/module/_product.scss
.product{
	position: relative;
	display: inline-block;
	vertical-align: top;
	width: percentage(1/4);
	margin-right: -0.24em;
	&:after{
		content: '';
		position: absolute;
		transition: all 300ms linear;
		border: 1px solid #fff;
		background: #fff;
	}
	&:hover{
		z-index: 100;
		&:after{
			top: 0; bottom: 0;
			left: -10px; right: -10px;
			box-shadow: 0 4px 7px rgba(0, 0, 0, 0.35);
			border: 1px solid $color__smoke;
			z-index: -1;
		}
	}
	@include media('<1160px'){
		width: percentage(1/3);
	}
	@include media('<880px'){
		width: percentage(1/2);
	}
	@include media('<640px'){
		width: percentage(1/1);

		&:after{
			display: none;
		}
	}
}
.product__inner{
	position: relative;
	max-width: 320px;
	margin: 0 auto;
	padding: 5px 10px 20px;
	@include media('<640px'){
		padding: 0;
		margin-bottom: 10px;
	}
	@include media('<=480px'){
		max-width: 100%;
	}
}
.product__photo{
	position: relative;
	display: block;
	display: flex;
	align-items: center;
	height: 300px;
	margin-bottom: 5px;
	text-align: center;
	@include media('<640px'){
		height: auto;
	}
	img {
		display: block;
		max-width: 100%;
		max-height: 100%;
		margin: 0 auto;
	}
}
.product__title{
	margin: 0 0 15px;
	text-align: center;
	@include media('<640px'){
		margin-bottom: 8px;
	}
	a{
		display: block;
		font-size: 21px;
		font-weight: 400;
		line-height: 24px;
		text-decoration: none;
		color: $color__base;
		@include media('<768px'){
			font-size: 18px;
		}
	}
}
.product__ingredients{
	min-height: 96px;
	margin: 0 0 10px;
	font-size: 16px;
	font-weight: 300;
	line-height: 24px;
	color: $color__darkgray;
	text-align: center;
	@include media('<768px'){
		line-height: 16px;
	}
	@include media('<640px'){
		min-height: 0;
	}
}
.product__additives{
	position: relative;
	margin-bottom: 5px;
	user-select: none;

	&.is--opened .product__additives-details{
		visibility: visible;
		opacity: 1;
		z-index: 50;
		transform: translateY(0);
		transition-delay: 0s, 0s, 0.3s;
	}

	@include media('<680px'){
		.cart-order__product-additives & .product__additives-details{
			transform: translateX(-800px);
		}
		.cart-order__product-additives 
		&.is--opened .product__additives-details{
			visibility: visible;
			opacity: 1;
			z-index: 50;
			transform: translateY(0) translateX(-43%);
			transition-delay: 0s, 0s, 0.3s;
		}
	}

	@include media('<=600px'){
		.cart-single__product-additives & .product__additives-details{
			transform: translateX(-800px);
		}
		.cart-single__product-additives 
		&.is--opened .product__additives-details{
			visibility: visible;
			opacity: 1;
			z-index: 50;
			transform: translateY(0) translateX(-60%);
			transition-delay: 0s, 0s, 0.3s;
		}
	}
}
.product__additives-toggler{
	text-align: center;
	cursor: pointer;
	span{
		display: inline-block;
		vertical-align: middle;
		font-size: 12px;
		font-weight: 300;
		line-height: 24px;
		text-transform: uppercase;
		color: $color__secondary;
	}
	i {
		display: inline-block;
		vertical-align: middle;
		margin-left: 4px;
	}
}
.product__additives-details{
	position: absolute;
	top: 100%;
	left: 0; right: 0;
	min-width: 260px;
	padding: 25px 9px 10px;
	
	box-shadow: 0 4px 7px rgba(0, 0, 0, 0.35);
	border: 1px solid $color__smoke;
	background-color: #fff;
	
	visibility: hidden;
	opacity: 0;
  transform: translateY(-8px);
  transition: all 0.3s ease-in-out 0s, visibility 0s linear 0.3s;
	z-index: -1;
}
.product__additives-list{
	display: flex;
	flex-direction: column;
	margin: 0; padding: 0;
	margin-bottom: 20px;
	list-style: none;
}
.product__additives-item{
	display: flex;
	justify-content: space-between;
}
.product__additives-item-title{
	width: 120px;
	font-size: 14px;
	font-weight: 300;
	line-height: 24px;
	color: $color__base;
}
.product__additives-item-qty{
	display: flex;
	justify-content: flex-end;
	width: 55px;
	text-align: right;
	i{
		cursor: pointer;
	}
}
.product__additives-item-price{
	width: 65px;
	font-size: 16px;
	font-weight: 400;
	line-height: 24px;
	color: $color__base;
	text-align: right;
}
.product__additives-item-currency{
	font-size: 10px;
	line-height: 20px;
}
.product__additives-close{
	position: absolute;
	right: 10px; top: 10px;
	cursor: pointer;
}
.product__additives-action{}
.product__variants{
	@include clearfix();
	margin-bottom: 25px;
	text-align: center;
	@include media('<640px'){
		margin-bottom: 10px;
	}
}
.product__additive-qty{
	display: flex;
	align-items: center;
	height: 24px;
	line-height: 24px;
}
.product__additive-qty-value{
	display: none;
	vertical-align: middle;
	width: 24px;
	padding: 0;
	border: none;
	outline: none;
	font-size: 16px;
	font-weight: 400;
	line-height: 24px;
	text-align: center;
	color: $color__darkgray;
	&:focus,
	&:hover{
		border: none;
	}
	.is--active & {
		display: inline-block;
	}
}
.product__additive-qty-minus,
.product__additive-qty-plus{
	cursor: pointer;
}
.product__additive-qty-minus{
	display: none;
	.is--active &{
		display: inline-block;
	}
}
.product__variants-item{
	position: relative;
	float: left;
	width: percentage(1/3);
	text-align: center;
}
.product__qty{
	float: left;
	padding-left: 15px;
	margin-bottom: 15px;
}
.product__price{
	float: right;
	padding-right: 15px;
	margin-bottom: 15px;
	color: $color__darkgray;
}
.product__price-value{
	font-size: 30px;
	line-height: 24px;
}
.product__price-currency{
	font-size: 14px;
	line-height: 20px;
	margin-left: 3px;
}
.product__action{
	clear: both;
	display: block;
	margin: 0 auto;
	padding: 4px;
	background: #fff;
	border: 2px solid $color__primary;
	outline: none;
	font-size: 16px;
	font-weight: 400;
	line-height: 24px;
	text-transform: uppercase;
	text-decoration: none;
	text-align: center;
	color: $color__primary;
	transition: all 300ms linear;
	cursor: pointer;
	&:hover{
		background-color: $color__primary;
		color: #fff;
	}
}
.product__action--secondary{
	border-color: $color__secondary;
	color: $color__secondary;
	&:hover{
		background-color: $color__secondary;
	}
}
.product__tag{
	position: absolute;
	bottom: 15px; left: 0; right: 0;
	margin: 0 auto;
}

